# cmake-example

./: .gitignore  README.md
01-basic/A-hello-cmake/: CMakeLists.txt  hello_cmake  main.cc
01-basic/B-hello-headers/: CMakeLists.txt  hello_headers
01-basic/B-hello-headers/include/: Hello.h
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: Hello.cc
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt  main.cc
01-basic/H-third-party-library/: CMakeLists.txt
01-basic/L-cpp-standard/i-command-method/: CMakeLists.txt
01-basic/L-cpp-standard/ii-cxx-standrad/: CMakeLists.txt
01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt
02-sub-projects/: CMakeLists.txt
02-sub-projects/subbinary/: CMakeLists.txt
02-sub-projects/sublibrary1/: CMakeLists.txt
03-code-generation/configure-file/: CMakeLists.txt
03-code-generation/protobuf/: CMakeLists.txt
04-static-analysis/clang-analyzer/: CMakeLists.txt
04-static-analysis/clang-analyzer/subproject1/: CMakeLists.txt
04-static-analysis/clang-format/: CMakeLists.txt
04-static-analysis/clang-format/cmake/modules/: clang-format.cmake
04-static-analysis/clang-format/subproject1/: CMakeLists.txt
04-static-analysis/clang-format/subproject2/: CMakeLists.txt
05-unit-testing/: CMakeLists.txt  Palindrome.cc  main.cc  unit_tests.cc
